--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="webpage/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" /> -->
     <title>Smart Parking System</title>
 </head>
@@ -46,7 +46,7 @@
             <div id="entryTime4"></div>
             <div id="elapTime4"></div>
         </div>
-        <div class="cs-box left vacant neumorphic" id="park5">
+        <!-- <div class="cs-box left vacant neumorphic" id="park5">
             <div>#5</div>
             <div id="parkState5">vacant</div>
             <div id="entryTime5"></div>
@@ -57,7 +57,7 @@
             <div id="parkState6">vacant</div>
             <div id="entryTime6"></div>
             <div id="elapTime6"></div>
-        </div>
+        </div> -->
     </div>
     <!-- <div><span>Potential :</span><span id="pot"></span></div>
     <div><span>Button State :</span><span id="button"></span></div> -->
@@ -65,7 +65,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-<script src="webpage/js/socket.io.js"></script>
-<script src="webpage/js/script.js"></script>
+<script src="js/socket.io.js"></script>
+<script src="js/script.js"></script>
 
 </html>
