--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>GATE STATUS :&nbsp;<span id="gate">CLOSED</span></h2>
     </div>
     <div class="text-center">
-        <h3>EMPTY SLOTS :&nbsp;<span id="slot">6</span></h3>
+        <h3>EMPTY SLOTS :&nbsp;<span id="slot">4</span></h3>
     </div>
     <div class="grid-container">
         <div class="cs-box left vacant neumorphic" id="park1">
@@ -66,6 +66,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 <script src="webpage/js/socket.io.js"></script>
-<script src="webpage/js/script.js"></script>
+<script type="module" src="webpage/js/script.js"></script>
 
 </html>
